--- a/Labs/lab4/sampling_distributions.Rmd
+++ b/Labs/lab4/sampling_distributions.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Foundations for statistical inference - Sampling distributions"
+runtime: shiny
 output:
   html_document:
-    css: ../lab.css
+    css: www/lab.css
     highlight: pygments
     theme: cerulean
-  pdf_document: default
 ---
 
 ```{r global_options, include=FALSE}
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(eval = FALSE)
 library(dplyr)
 library(ggplot2)
 library(mosaic)
+load("ames.RData")
 ```
 
 <div id="template">
@@ -57,7 +58,7 @@ sales visually and with summary statistics. Let's first create a visualization,
 a histogram:
 
 ```{r area-hist}
-qplot(data = ames, x = area, binwidth = 250)
+qplot(data = ames, x = area, binwidth = 250, geom = "histogram")
 ```
 
 Let's also obtain some summary statistics. Note that we can do this using the
@@ -155,7 +156,7 @@ with replacement.
 sample_means50 <- do(2000) * ames %>% 
                               sample_n(50, replace = TRUE) %>%
                               summarise(x_bar = mean(area))
-                          
+
 qplot(data = sample_means50, x = x_bar)
 ```
 
@@ -220,83 +221,105 @@ Note that for each of the 2.000 times we computed a mean, we did so from a
 
 ## Sample size and the sampling distribution
 
-### NOTE: I MIGHT REPLACE THIS SECTION WITH A SHINY APP SO STUDENTS DON'T
-### NEED TO CREATE THE SAMPLING DISTRIBUTIONS WITH CODE
-
 Mechanics aside, let's return to the reason we used the `do` function: to compute a 
 sampling distribution, specifically, this one.
 
 ```{r hist}
-qplot(data = sample_means50, x = x_bar)
+qplot(data = sample_means50, x = x_bar, geom = "histogram")
 ```
 
 The sampling distribution that we computed tells us much about estimating 
 the average living area in homes in Ames.  Because the sample mean is an 
 unbiased estimator, the sampling distribution is centered at the true average 
-living area of the the population, and the spread of the distribution 
+living area of the population, and the spread of the distribution 
 indicates how much variability is induced by sampling only 50 home sales.
 
 In the remainder of this section we will work on getting a sense of the effect that 
-sample size has on our sampling distribution
+sample size has on our sampling distribution.
 
-**Step 1:** Create three sampling distributions, each containing 2,000 sample means,
-with sample means coming from samples of size $n = 10$, $n = 50$, and $n = 100$.
-
-```{r samp-10-100}
-sample_means10 <- do(2000) * ames %>%
-                              sample_n(10, replace = TRUE) %>%
-                              summarise(x_bar = mean(area))
-sample_means50 <- do(2000) * ames %>%
-                              sample_n(50, replace = TRUE) %>%
-                              summarise(x_bar = mean(area))
-sample_means100 <- do(2000) * ames %>%
-                              sample_n(100, replace = TRUE) %>%
-                              summarise(x_bar = mean(area))
+1.  Use the app below to create sampling distributions of means of `area`s from
+    samples of size 10, 50, and 100. Use 2000 simulations. How does the mean, standard
+    error, and shape of the sampling distribution change as the sample size is
+    larger? (You do not need to include plots in your answer.)
+    
+```{r shiny, echo=FALSE, eval=TRUE}
+shinyApp(
+  ui <- fluidPage(
+    
+    # Sidebar with a slider input for number of bins 
+    sidebarLayout(
+      sidebarPanel(
+        
+        selectInput("selected_var",
+                    "Variable:",
+                    choices = list("area", "price"),
+                    selected = "area"),         
+        
+        numericInput("n_samp",
+                     "Sample size:",
+                     min = 1,
+                     max = nrow(ames),
+                     value = 30),
+        
+        numericInput("n_sim",
+                     "Number of samples:",
+                     min = 1,
+                     max = 5000,
+                     value = 2000) 
+        
+      ),
+      
+      # Show a plot of the generated distribution
+      mainPanel(
+        plotOutput("sampling_plot"),
+        verbatimTextOutput("sampling_mean"),
+        verbatimTextOutput("sampling_se")
+      )
+    )
+  ),
+  
+  # Define server logic required to draw a histogram
+  server <- function(input, output) {
+    
+    # create sampling distribution
+    sampling_dist <- reactive({
+      ames[[input$selected_var]] %>%
+        sample(size = input$n_samp * input$n_sim, replace = TRUE) %>%
+        matrix(ncol = input$n_samp) %>%
+        rowMeans() %>%
+        data.frame(x_bar = .)
+    })
+    
+    # plot sampling distribution
+    output$sampling_plot <- renderPlot({
+      x_min <- quantile(ames[[input$selected_var]], 0.1)
+      x_max <- quantile(ames[[input$selected_var]], 0.9)
+      
+      ggplot(sampling_dist(), aes(x = x_bar)) +
+        geom_histogram() +
+        xlim(x_min, x_max) +
+        ylim(0, input$n_sim * 0.35) +
+        ggtitle(paste0("Sampling distribution of mean ", 
+                       input$selected_var, " (n = ", input$n_samp, ")")) +
+        xlab(paste("mean", input$selected_var)) +
+        theme(plot.title = element_text(face = "bold", size = 16))
+    })
+    
+    # mean of sampling distribution
+    output$sampling_mean <- renderText({
+      paste0("mean = ", round(mean(sampling_dist()$x_bar), 2))
+    })
+    
+    # mean of sampling distribution
+    output$sampling_se <- renderText({
+      paste0("SE = ", round(sd(sampling_dist()$x_bar), 2))
+    })
+  },
+  
+  options = list(height = 500) 
+)
 ```
 
-**Step 2:** Plot these three sampling distributions on top of each other on the
-same scale so that we can easily compare their shapes, centers, and spreads to
-each other.
-
-- **Step 2a:** Combine these three sampling distributions (three $2000 \times 1$ data 
-frames) into one $12000 \times 1$ data frame. Note that we're just doing this 
-for ease in plotting later. To combine data frames by row, we use the `rbind` function, which stands for **r**ow bind.
-
-```{r samp-dist}
-sampling_dist <- rbind(sample_means10, sample_means50, sample_means100)
-```
-
-- **Step 2b:** Add a new column called `sample_size` to the data frame you just
-created that indicates the sample size that each case (each sample mean) came
-from. Remember the first 2,000 sample means came from samples of size 10, the next
-2,000 sample means came from samples of size 50, and the last 2,000 sample means
-came from samples of size 100. Hence, this new variable is simply $10$ `rep`eated 
-2,000 times, followed by $50$ repeated 2000 times, followed by $100$ repeated 2,000 
-times. The use of the `factor` function will ensure that `R` considers this to be a 
-categorical variable, and not a numerical one. Also remember that we use the `mutate`
-function to create new variables in data frames.
-
-```{r samp-dist-labeled}
-sampling_dist <- sampling_dist %>%
-  mutate(sample_size = factor(rep(c(10,50,100), each = 2000)))
-```
-
-- **Step 2c:** Finally, draw three histograms representing these three sampling 
-distributions. We can do this via *faceting*, i.e. creating a separate facet in the 
-plot for each of the three distributions. Remember that we identify the distributions
-with the `sample_size` variable we created earlier, so that's what we use to
-create our `facets`. The formula `sample_size ~ .` is new: it splits the y-axis of our
-plot into facets by `sample_size` and doesn't split the plot on the x-axis, which
-means the plots of the three sampling distributions will be placed on top of each 
-other, as opposed to next to each other. We choose this to make it easier to visually 
-compare their spreads.
-
-```{r plot-samp-dists}
-qplot(data = sampling_dist, x = x_bar, facets = sample_size ~ . )
-```
-
-1.  When the sample size is larger, what happens to the center?  What about the 
-    spread? Make sure to include the plots in your answer.
 
 * * *
 
