--- a/Labs/lab4/sampling_distributions.Rmd
+++ b/Labs/lab4/sampling_distributions.Rmd
@@ -165,9 +165,8 @@ the mean of each sample, and store each result in a vector called
 `sample_means50`. On the next page, we'll review how this set of code works.
 
 1.  How many elements are there in `sample_means50`?  Describe the sampling 
-    distribution, and be sure to specifically note its center. Would you 
-    expect the distribution to change if we instead collected 10,000 sample 
-    means?
+    distribution, and be sure to specifically note its center. Make sure to include 
+    a plot of the distribution in your answer.
 
 ## Interlude: The `do` function
 
@@ -213,11 +212,12 @@ sample_means50 <- do(2000) * ames %>%
 Note that for each of the 2.000 times we computed a mean, we did so from a 
 **different** sample!
 
-1.  To make sure you understand what the `sample_n` and `do` function do, try
-    modifying the code to take only **25 sample means** from **samples of size 10**, 
+1.  To make sure you understand how sampling distributions are built, and exactly
+    what the `sample_n` and `do` function do, try modifying the code to create a
+    sampling distribution of **25 sample means** from **samples of size 10**, 
     and put them in a data frame named `sample_means_small`. Print the output. 
-    How many elements are there in this object called `sample_means_small`? What does 
-    each element represent?
+    How many observations are there in this object called `sample_means_small`? 
+    What does each observation represent?
 
 ## Sample size and the sampling distribution
 
@@ -238,9 +238,11 @@ In the remainder of this section we will work on getting a sense of the effect t
 sample size has on our sampling distribution.
 
 1.  Use the app below to create sampling distributions of means of `area`s from
-    samples of size 10, 50, and 100. Use 2000 simulations. How does the mean, standard
-    error, and shape of the sampling distribution change as the sample size is
-    larger? (You do not need to include plots in your answer.)
+    samples of size 10, 50, and 100. Use 5,000 simulations. What does each 
+    observation in the sampling distribution represent? How does the mean, standard
+    error, and shape of the sampling distribution change as the sample size
+    increases? How (if at all) do these values change if you increase the number 
+    of simulations? (You do not need to include plots in your answer.)
     
 ```{r shiny, echo=FALSE, eval=TRUE}
 shinyApp(
@@ -264,8 +266,8 @@ shinyApp(
         numericInput("n_sim",
                      "Number of samples:",
                      min = 1,
-                     max = 5000,
-                     value = 2000) 
+                     max = 15000,
+                     value = 5000) 
         
       ),
       
@@ -307,12 +309,12 @@ shinyApp(
     
     # mean of sampling distribution
     output$sampling_mean <- renderText({
-      paste0("mean = ", round(mean(sampling_dist()$x_bar), 2))
+      paste0("mean of sampling distribution = ", round(mean(sampling_dist()$x_bar), 2))
     })
     
     # mean of sampling distribution
     output$sampling_se <- renderText({
-      paste0("SE = ", round(sd(sampling_dist()$x_bar), 2))
+      paste0("SE of sampling distribution = ", round(sd(sampling_dist()$x_bar), 2))
     })
   },
   
@@ -329,6 +331,10 @@ shinyApp(
 
 So far, we have only focused on estimating the mean living area in homes in 
 Ames. Now you'll try to estimate the mean home price.
+
+Note that while you might be able to answer some of these questions using the app
+you are expected to write the required code and produce the necessary plots and
+summary statistics. You are welcomed to use the app for exploration.
 
 -   Take a sample of size 15 from the population and calculate the mean `price`
     of the homes in this sample. Using this sample, what is your best point estimate
